--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -16,6 +16,11 @@
       </div>
     </div>
   </div>
+    <span class='st_facebook_hcount' displayText='Facebook'></span>
+    <span class='st_twitter_hcount' displayText='Tweet'></span>
+    <span class='st_googleplus_hcount' displayText='Google +'></span>
+    <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
+    <span class='st_pinterest_hcount' displayText='Pinterest'></span>
 </div>
 
 
