--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,7 +11,7 @@ body{
 	font-family:sans-serif;
 }
 .navbar{
-	background-color:#EFEFEF;
+	background-color:##FF0000;
 }
 .navbar .navbar-brand{
 	font-family:serif;
