--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,12 +11,12 @@ body{
 	font-family:sans-serif;
 }
 .navbar{
-	background-color:#FF0000;
+	background-color:#EFEFEF;
 }
 .navbar .navbar-brand{
 	font-family:serif;
 	font-wight:400;
-	color:#54ffff;
+	color:#FF0000;
 	font-size:30px;
 }
 .center{
