--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,7 +1,7 @@
 @import "bootstrap";
 
 body{
-	background: url(bg.jpg) no-repeat center center fixed; 
+	background: url(asset-path('bg.jpg')) no-repeat center center fixed; 
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
